wflow_publish(c("analysis/about.Rmd", "analysis/index.Rmd", "analysis/license.Rmd",     "analysis/kolokvium_manik.Rmd", "analysis/_site.yml"))

--- a/analysis/_site.yml
+++ b/analysis/_site.yml
@@ -1,7 +1,7 @@
-name: "Kolokvium_final"
+name: Kolokvium
 output_dir: ../docs
 navbar:
-  title: "Kolokvium_final"
+  title: Kolokvium
   left:
   - text: Home
     href: index.html
@@ -9,6 +9,12 @@ navbar:
     href: about.html
   - text: License
     href: license.html
+  - text: Kolokvium
+    href: kolokvium_manik.html
+  right:
+  - icon: fab fa-github
+    text: Source code
+    href: https://github.com/manikpeter/Kolokvium
 output:
   workflowr::wflow_html:
     toc: yes
